xfsprogs-2.0.6 (30 May 2002)
	- Fix error returns from log recovery (affects xfs_repair).
	- Fix the way mkfs.xfs round downs the device when the last 
	  AG is smaller than the minimum AG size.
	- Fix bug in xfs_repair da_write() routine, which affects
	  filesystems where the data blocksize != naming blocksize
	  (see xfs_info output).
	- Fix a use-after-free bug in xfs_repair code for checking
	  version 1 btree-format directories.
	- Add checks of the ACL permissions field into xfs_repair.

xfsprogs-2.0.5 (02 May 2002)
	- Size AGs so that they do not always start on the same 
	  part of a striped disk
	- Fix an off-by-one error on rounding down an AG that is
	  too small to be an AG
	- Don't auto-grow the log to be larger than an AG
	- Change the error philosophy for -d su=,sw= away from forcing 
	  the XFS stripe size to match the volume manager stripe size
	  and instead accept, with a warning, the stripe unit & width
	  supplied on the commandline.
	- Update xfs_growfs man page
	- Don't build libxlog.a with DEBUG enabled
	- xfs_db fixes from ASANO Masahiro at NEC

xfsprogs-2.0.4 (17 April 2002)
	- Minor update sync'ing with kernel changes (less endian
	  swabbing in libxfs code)

xfsprogs-2.0.3 (13 April 2002)
	- Important build system update, was causing libxfs to be
	  built incorrectly, which can cause xfs_repair to fail by
	  tripping asserts in additional libxfs debug code.

xfsprogs-2.0.2 (04 April 2002)
	- Bumped version of libhandle to libhandle.so.1.0.1
	  This changes open_by_handle() and friends so that 
	  O_LARGEFILE is added to the open flags.
	  This allows xfsdump to dump files greater than
	  2^31-1 bytes instead of not dumping the large
	  files and giving warning messages.

xfsprogs-2.0.1 (12 March 2002)
	- Fall back to BLKGETSIZE if BLKGETSIZE64 fails
	- Sync user/kernel headers and shared code

xfsprogs-2.0.0 (26 February 2002)
	- Major release to coincide with switch to new extended
	  attributes system call interfaces