@@ -73,7 +73,7 @@ or in bytes with
 .BR size= .
 The default value is 4096 bytes (4 KB) on systems with a 4KB pagesize.
 The minimum value for block size is 512; the maximum is 65536 (64 KB).
-XFS on Linux currently only supports pagesize blocks.
+XFS on Linux currently only supports pagesize or smaller blocks.
 .TP
 .B \-d
 Data section options.
